--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "jquery": "^3.6.0",
+    "ol": "^6.5.0",
+    "popper.js": "^1.16.1",
+    "vue": "^3.0.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
